# automated-research-and-report-generation

./: .env.copy  .gitignore  Dockerfile  Dockerfile.jenkins  Jenkinsfile  README.md  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  complete-cleanup.sh  deploymet_steps.docx  description.txt  main.py  pyproject.toml  setup-app-infrastructure.sh  ~$ploymet_steps.docx
generated_report/GenAI_in_Defence_20251026_145111/: GenAI_in_Defence_20251026_145111.docx
notebook/: test.ipynb
research_and_analysts/api/: main.py
research_and_analysts/api/routes/: report_routes.py
research_and_analysts/api/services/: report_service.py
research_and_analysts/api/templates/: report_progress.html
research_and_analysts/database/: db_config.py
research_and_analysts/utils/: config_loader.py  model_loader.py
research_and_analysts/workflows/: interview_workflow.py  report_generator_workflow.py
